# triangle-itersection

./: CMakeLists.txt  README.md
include/: geometry_utils.hpp  triangle.hpp
src/: geometry_utils.cpp  main.cpp  triangle.cpp
tests/: 2d.txt  3d.txt  input1.txt  input2.txt  input3.txt  input4.txt  input5.txt
